--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Show page</h1>
-<p><%= @entry.id %>. <%= @entry.word %></p>
+<h1>the word no.<%= @entry.id %>: <%= @entry.word %> <span>(<%= @entry.language %>)</span></h1>
+<h2>Definition:</h2>
+<p><%= @entry.definition %></p>
