Creating index page to display all entries as a link to show pages

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,1 +1,6 @@
-<h1>Entries</h1>
+<h1>Dictionary</h1>
+<% @entries.each do |entry| %>
+<ul>
+  <li><%= link_to "#{entry.word}", entry %></li>
+</ul>
+<% end %>
