Creating a form for new

--- a/app/views/entries/new.html.erb
+++ b/app/views/entries/new.html.erb
@@ -1,1 +1,15 @@
 <h1>New entry</h1>
+  <%= form_with model: @entry, local:true do |form| %>
+  <p>
+    <%= form.label :word %>
+    <%= form.text_field :word %>
+  </p>
+  <p>
+    <%= form.label :definition %>
+    <%= form.text_area :definition %>
+  </p>
+  <p>
+    <%= form.label :language %>
+    <%= form.text_field :language %>
+  </p>
+  <% end %>
