--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -3,4 +3,4 @@
 <p><%= @entry.definition %></p>
 <%= link_to 'Back', entries_path %>
 <%= link_to 'Edit', edit_entry_path %>
-<%= link_to 'Delete', entry_path(@entry), method: :delete %>
+<%= link_to 'Delete', entry_path(@entry), method: :delete, data: { confirm: 'Are you sure?'} %>
